<resources>
    <string name="app_name">MyNews App</string>

    <string name="health">Health</string>
    <string name="movies">Movies</string>
    <string name="science">Science</string>
    <string name="most_popular">Most popular</string>
    <string name="top_stories">Top stories</string>

    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_title">Search</string>
    <string name="action_notifications">Notification</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <string name="end_date">End date</string>
    <string name="begin_date">Begin date</string>
    <string name="date_ex">YYYY/MM/DD</string>
    <string name="search_query_term">Search query term</string>

    <string name="top_stories_url">https://api.nytimes.com/svc/topstories/v2/home.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="most_popular_url">https://api.nytimes.com/svc/mostpopular/v2/mostviewed/all-sections/7.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="science_url">https://api.nytimes.com/svc/search/v2/articlesearch.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0&amp;fq=news_desk:(science)&amp;sort=newest</string>
    <string name="health_url">https://api.nytimes.com/svc/search/v2/articlesearch.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0&amp;fq=news_desk:(health)&amp;sort=newest</string>
    <string name="movies_url">https://api.nytimes.com/svc/search/v2/articlesearch.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0&amp;fq=news_desk:(movies)&amp;sort=newest</string>
    <string name="article_url">https://api.nytimes.com/svc/search/v2/articlesearch.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="enable_notify">Enable notifications (once per day)</string>
    <string name="thumbnail">thumbnail</string>

     <string name="channel_name">my news</string>
    <string name="channel_description">notification</string>
    <string name="ny_times_logo">https://upload.wikimedia.org/wikipedia/commons/4/40/New_York_Times_logo_variation.jpg</string>
</resources>
