<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".controller.activities.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:padding="@dimen/text_size"
        android:textSize="@dimen/info_text_size" />

    <TextView
        android:id="@+id/info_text1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lineSpacingExtra="1.5dp"
        android:padding="@dimen/text_size"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/info_text2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lineSpacingExtra="1.5dp"
        android:padding="@dimen/text_size"
        android:textSize="@dimen/text_size" />

</LinearLayout>