<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <include
            layout="@layout/search_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/checkbox_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:text="@string/search_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size" />


    </LinearLayout>
</LinearLayout>